--- a/practical/IFT6135_A2023_Diffusion_students.ipynb
+++ b/practical/IFT6135_A2023_Diffusion_students.ipynb
@@ -740,7 +740,7 @@
     "def sample(model, image_size, batch_size=16, channels=3):\n",
     "    # Returns a sample by running the sampling loop\n",
     "    with torch.no_grad():\n",
-    "        return p_sample_loop(model, shape=(batch_size, channels, image_size, image_size), timesteps=T, (betas, sqrt_one_minus_alphas_cumprod, sqrt_recip_alphas, posterior_variance))"
+    "        return p_sample_loop(model, shape=(batch_size, channels, image_size, image_size), timesteps=T, T=T (betas, sqrt_one_minus_alphas_cumprod, sqrt_recip_alphas, posterior_variance))"
    ]
   },
   {
