--- a/theory/assignment3_theory_en.tex
+++ b/theory/assignment3_theory_en.tex
@@ -205,7 +205,8 @@ Specify the receptive field of the output pixel that corresponds to the third ro
 \end{enumerate}
 Your answer should look like Figure~\ref{fig:pixcnn5} (Right). 
 }
-\end{exercise}
+
+
 \Answer{
   \subsubsection*{1.1}
   First, note that
@@ -228,15 +229,135 @@ Your answer should look like Figure~\ref{fig:pixcnn5} (Right).
       A^{AA}_{33} = aA^{A}_{22} +  b A^{A}_{23} + c   A^{A}_{24} + d A^{A}_{32}
     \label{eqaa}
     \end{equation}
-    To find the explicit receptive field of $A^{AA}_f{33}$, we
+    To find the explicit receptive field of $A^{AA}_{33}$, we
     need to find the receptive field of the $A^{A}_{ij}$ in the equation \ref{eqaa}.
-    The receptive field of  $A^{A}_{22}$ is the set $\{11, 12 ,13, 21\}$
-    The receptive field of  $A^{A}_{23}$ is the set $\{12, 13 ,14, 22\}$
-    The receptive field of  $A^{A}_{24}$ is the set $\{13, 14 ,15, 23\}$
-    The receptive field of  $A^{A}_{32}$ is the set $\{21, 22 ,23, 31\}$.
-    Therefore, the receptive field of $A^{AA}_{33}$ is the union of sets.
-    % TODO: insérer matrice icite!
+    \begin{enumerate}
+        \item The receptive field of  $A^{A}_{22}$ is the set $\{11, 12 ,13, 21\}$
+        \item The receptive field of  $A^{A}_{23}$ is the set $\{12, 13 ,14, 22\}$
+        \item The receptive field of  $A^{A}_{24}$ is the set $\{13, 14 ,15, 23\}$
+        \item The receptive field of  $A^{A}_{32}$ is the set $\{21, 22 ,23, 31\}$.
+    \end{enumerate}
+    Therefore, the receptive field of $A^{AA}_{33}$ is the union of the
+    preceding receptive field:
+    \begin{figure}[h]
+    \centering
+    \begin{tikzpicture}[every node/.style={minimum size=.5cm-\pgflinewidth, outer sep=0pt}]
+    \visible{11}\visible{12}\visible{13}\visible{14}\visible{15}\visible{21}\visible{22}\visible{23}\visible{31}
+    \drawgrid
+    \end{tikzpicture}
+    \caption{Receptive field of applying $M^{A}$ twice}
+    \label{fig:pixcnn5}
+    \end{figure}
+
+  \subsubsection*{1.2}
+  First, note that
+  \begin{equation}
+    K \odot M^{B} =
+        \begin{bmatrix}
+            a & b & c \\
+            d & e & 0 \\
+            0 & 0 & 0
+        \end{bmatrix}
+        \label{kma}
+    \end{equation}
+    and that
+    \begin{equation}
+      A^{AB} := (A * (K \odot M^{A}) * (K \odot M^{B})).
+      \label{aab}
+    \end{equation}
+    The receptive field of $A_{33}^{AB}$ is
+    \begin{equation}
+      A^{AB}_{33} = aA^{A}_{22} +  b A^{A}_{23} + c   A^{A}_{24} + d A^{A}_{32} + e A^{A}_{33}
+    \label{eqab}
+    \end{equation}
+    Because the receptive field of $A^{AB}_{33}$ is the union of receptive fields
+    and we are only adding in the new receptive field of $A^{A}_{33}$, we have the
+    following receptive field:
+    \begin{figure}[h]
+    \centering
+    \begin{tikzpicture}[every node/.style={minimum size=.5cm-\pgflinewidth, outer sep=0pt}]
+      \visible{11}\visible{12}\visible{13}\visible{14}\visible{15}
+      \visible{21}\visible{22}\visible{23}\visible{24}
+      \visible{31}\visible{32}
+    \drawgrid
+    \end{tikzpicture}
+    \caption{Receptive field of applying $M^{A}$ followed by $M^{B}$}
+    \label{fig:pixcnn5}
+    \end{figure}
+
+  \subsubsection*{1.3}
+  First, note that
+    \begin{equation}
+      A^{BA} := (A * (K \odot M^{B}) * (K \odot M^{A})).
+      \label{aaa}
+    \end{equation}
+    The receptive field of $A_{33}^{AB}$ is
+    \begin{equation}
+      A^{BA}_{33} = aA^{B}_{22} +  b A^{B}_{23} + c   A^{B}_{24} + d A^{B}_{32}
+    \label{eqaa}
+    \end{equation}
+    \begin{enumerate}
+        \item The receptive field of  $A^{B}_{22}$ is the set
+            $\{11, 12 ,13, 21, 22\}$
+        \item The receptive field of  $A^{B}_{23}$ is the set
+            $\{12, 13 ,14, 22, 23\}$
+        \item The receptive field of  $A^{B}_{24}$ is the set
+            $\{13, 14 ,15, 23, 24\}$
+        \item The receptive field of  $A^{B}_{32}$ is the set
+            $\{21, 22, 23, 31, 32\}$.
+    \end{enumerate}
+    Because the receptive field of $A^{BA}_{33}$ is the union of receptive fields, we have the
+    following receptive field:
+    \begin{figure}[h]
+    \centering
+    \begin{tikzpicture}[every node/.style={minimum size=.5cm-\pgflinewidth, outer sep=0pt}]
+      \visible{11}\visible{12}\visible{13}\visible{14}\visible{15}
+      \visible{21}\visible{22}\visible{23}\visible{24}
+      \visible{31}\visible{32}
+    \drawgrid
+    \end{tikzpicture}
+    \caption{Receptive field of applying $M^{B}$ followed by $M^{A}$}
+    \label{fig:pixcnn5}
+    \end{figure}
+
+  \subsubsection*{1.4}
+  First, note that
+    \begin{equation}
+      A^{BB} := (A * (K \odot M^{B}) * (K \odot M^{B})).
+      \label{aaa}
+    \end{equation}
+    The receptive field of $A_{33}^{BB}$ is
+    \begin{equation}
+      A^{BB}_{33} = aA^{B}_{22} +  b A^{B}_{23} + c A^{B}_{24} + d A^{B}_{32} + e A^{B}_{33}
+    \label{eqaa}
+    \end{equation}
+    \begin{enumerate}
+        \item The receptive field of  $A^{B}_{22}$ is the set
+            $\{11, 12 ,13, 21, 22\}$
+        \item The receptive field of  $A^{B}_{23}$ is the set
+            $\{12, 13 ,14, 22, 23\}$
+        \item The receptive field of  $A^{B}_{24}$ is the set
+            $\{13, 14 ,15, 23, 24\}$
+        \item The receptive field of  $A^{B}_{32}$ is the set
+            $\{21, 22, 23, 31, 32\}$.
+        \item The receptive field of  $A^{B}_{33}$ is the set
+            $\{22, 23, 24, 32, 33\}$.
+    \end{enumerate}
+    Because the receptive field of $A^{BA}_{33}$ is the union of receptive fields, we have the
+    following receptive field:
+    \begin{figure}[h]
+    \centering
+    \begin{tikzpicture}[every node/.style={minimum size=.5cm-\pgflinewidth, outer sep=0pt}]
+      \visible{11}\visible{12}\visible{13}\visible{14}\visible{15}
+      \visible{21}\visible{22}\visible{23}\visible{24}
+      \visible{31}\visible{32}\visible{33}
+    \drawgrid
+    \end{tikzpicture}
+    \caption{Receptive field of applying $M^{B}$ twice}
+    \label{fig:pixcnn5}
+    \end{figure}
 }
+\end{exercise}
 \begin{exercise}[5-5] (\textbf{Normalizing Flows})
 In this question, we study some properties of normalizing flows. Let $X \sim P_X$ and $U \sim P_U$ be, respectively, the distribution of the data and a base distribution (e.g. an isotropic gaussian). We define a normalizing flow as $F: \mathcal{U} \rightarrow \mathcal{X}$ parametrized by $\vtheta$. Starting with $P_U$ and then applying $F$ will induce a new distribution $P_{F(U)}$ (used to match $P_X$). Since normalizing flows are invertible, we can also consider the distribution $P_{F^{-1}(X)}$.
 %(after minimizing the forward KL divergence $D_{KL}[p_X(\vx) || q_X(\vx;\theta)]$).
@@ -248,13 +369,11 @@ However, some flows, like planar flows, are not easily invertible in practice. I
     \item Suppose two scenarios: 1) you don't have samples from $p_X(\vx)$, but you can evaluate $p_X(\vx)$, 2) you have samples from $p_X(\vx)$, but you cannot evaluate $p_X(\vx)$. For each scenario, specify if you would use the forward KL divergence $D_{KL}[P_X || P_{F(U)}]$ or the reverse KL divergence $D_{KL}[P_{F(U)} || P_X]$ as the objective to optimize. Justify your answer.
 \end{enumerate}
 
-\end{exercise}
 
 \Answer{
   \subsubsection*{2.1}
 Suppose we have the density of $P_{X }$ and $P_{U}$ has $p(x)$ and $q(u)$ respectively.
-By applying a change of variable ($x = F(u)$ for some $u$ and $u = F^{-1}(x)$
-for some $x$), we obtain the following density for each distributions:
+By applying the change of variable $x = F(u)$, we obtain the following density for each distributions:
 \begin{table}[H]
 \centering
 \begin{tabular}{ll}
@@ -289,6 +408,7 @@ D_{KL} (P_{X}|| P_{F(u)}) &= \int_{U} p(F(u))|\text{det}  J_{F}| (\log p(F(u)) -
   require to know exactly the value of $p(x)$ but to have the ability to sample
   from $P_{X}$.
 }
+\end{exercise}
 
 \begin{exercise}[3-8-3-14] (\textbf{Variational Autoencoders})
 \begin{enumerate}
@@ -329,14 +449,14 @@ D_{KL} (P_{X}|| P_{F(u)}) &= \int_{U} p(F(u))|\text{det}  J_{F}| (\log p(F(u)) -
     \item Given a special case where $k=2$, prove that $\mathcal{L}_2$ is a tighter bound than the ELBO (with $k=1$). 
     \end{enumerate}		
 \end{enumerate}
-\end{exercise}
 
 \Answer{
 
 
 
-  answer here
 }
+\end{exercise}
+
 \begin{exercise}[2-2-2-3-3-10] (\textbf{Generative Adversarial Networks})
 \begin{enumerate}
     \item Consider a Generative Adversarial Network (GAN) which successfully produces images of apples. Which of the following propositions is false?
@@ -374,12 +494,12 @@ D_{KL} (P_{X}|| P_{F(u)}) &= \int_{U} p(F(u))|\text{det}  J_{F}| (\log p(F(u)) -
         Assume $f_0$ and $f_1$ have the same support. Show that $f_1(\vx)$ can be estimated by ${f_0(\vx){D(\vx)}/(1-D(\vx))}$ by establishing the identity $f_1(\vx)={f_0(\vx){D^*(\vx)}/(1-D^*(\vx))}$.
     \end{enumerate}
     \emph{Hint: Find the closed form solution for $D^*$.}
-\end{enumerate}\end{exercise}
+\end{enumerate}
 
 \Answer{
-
-  answer here
+  here is some text
 }
+\end{exercise}
 \begin{exercise}[5-5-5-5] (\textbf{Self-Supervised Learning: Paper Review})
 
 
@@ -419,10 +539,70 @@ Your review should have the following four sections: Summary, Strengths, Weaknes
 
 \end{enumerate}
 
-This question is subjective and so we will accept a variety of answers. You are expected to analyze the paper and offer your own perspective and ideas, beyond what the paper itself discusses.\end{exercise}
+This question is subjective and so we will accept a variety of answers. You are expected to analyze the paper and offer your own perspective and ideas, beyond what the paper itself discusses.
 
+\newpage
 \Answer{
+  \subsubsection*{Summary}
+    The authors introduced a new self-supervised framework based on contrastive
+    learning called \emph{SimCLR}. They used their approach to find a good
+    representation of images coming from ImageNet and train a linear classifier on
+    these representations. Their linear classifier achieved performance similar to
+    ResNet-50 when given their representation. They also developed new theorical
+    insights: they showed the importance of data augmentation and non-linear
+    transformation between the representation and the contrastive loss. Finally,
+    they demonstrated how contrastive learning takes advantage of bigger batches and
+    more training time.
+  \subsubsection*{Strenghts}
+    Their approach is innovative in a few ways. It has the benefit of not
+    constraining the user to a specific architecture or even a class of
+    architecture.
+    They also don't evaluate the loss in the usual way: rather
+    than calculating the contrastive loss on the latent vector $h_{i}$, they
+    evaluate the loss function on $z_{i}$, the result of passing the latent
+    $h_{i}$ inside a small MLP. They gave convincing arguments that this
+    techniques is generally better for this type of training.
+    Another interesting theorical insight the researchers gave is the usefulness
+    of data augmentation, especially in the case of contrastive learning. They
+    demonstrated how constrastive learning learns more than supervised learnning
+    algorithm from 'strong' augmentations.
+    Finally, they rigorously tested their approach on different sets and
+    tasks. They used both ImageNet and Cifar-10 and tested their results on
+    many different datasets for transfer learning, in addition of following the
+    linear evaluation protocol and comparing their results with semi-supervised
+    and transfer learning tasks.
+  \subsubsection*{Weaknesses}
 
-  answer here
+    Although their paper is innovative in many aspects, it has some
+    weaknesses. A big weakness of their paper is their limitation to image
+    classification problems. They takle a single type of problem, and do not
+    show how their method could be generalized to other tasks or contexts.
+    Furthermore, their method is not more performant than classical supervised
+    learning and therefore does not solve problems in a radically more
+    performant way.
+    They also showed plenty of results from their experiments, such as their
+    performance against supervised ResNet. However, the authors do not report
+    the variance of their results and do not give a confidence interval, which
+    reduces the confidence one can give to their results.
+    Finally, their claim about how unsupervised learning benefits more from
+    bigger models than its supervised counterpart have been barely explained or
+    showed in their paper. It is not clear how the authors came to this
+    conclusion simply by looking at figure 7 of their paper, especially
+    considering they are taking into account only the ResNet in their results
+    and comparing models trained for different number of epochs.
+
+  \subsubsection*{Reflections}
+
+    This paper was interesting because it proposed an original training
+    methodology, mainly based around data augmentation. Their approach does not need
+    labels to work and is therefore adapted for data scarce environments.  In
+    addition, this articles opens the way for original tasks by treating data
+    augmentation as a predictive task. In class, we were introduced to how
+    \emph{BYOL} and \emph{DINO} worked. This article was very useful for
+    understanding the contrastive learning works, wich was explained in the
+    \emph{SimCLR} article. This paper made me curious two things: how can we
+    reframe our training objectives in an orginal and useful way and can the
+    unsupervised learning paradigm outperform the supervised learning approach.
 }
+\end{exercise}
 \end{document}
